H36 add seen request api
